--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
       <version>1.7.5</version>
       <scope>runtime</scope>
     </dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>2.37.1</version>
+		</dependency>
   </dependencies>
   <build>
     <plugins>
