--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -7,12 +7,12 @@
     <artifactId>AjaxMutator-sample</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>AjaxMutatorSample</name>
-    <description>This is a sample project to demonstrate the useage of AjaxMutator</description>
+    <description>This is a sample project to demonstrate the usage of AjaxMutator</description>
     <dependencies>
         <dependency>
             <groupId>src.jp.gr.java_conf.daisy.ajax_mutator</groupId>
             <artifactId>AjaxMutator</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>src.jp.gr.java_conf.daisy.ajax_mutator</groupId>
@@ -45,7 +45,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.3</version>
+                <version>2.4</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
